added ADMIN_ENDPOINTS list to security config